--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation project(path: ':selector-photo')
     implementation project(path: ':flowlayout')
     implementation project(path: ':skin')
+    implementation project(path: ':second-linked')
 
     implementation "androidx.multidex:multidex:$multidex"
 
@@ -92,6 +93,8 @@ dependencies {
     implementation "com.github.LuckSiege.PictureSelector:picture_library:$picture_selector"
     implementation "com.github.bumptech.glide:glide:$glide"
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
+
+    //implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
 
 }
