--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        tools:replace="android:theme"
+        xmlns:tools="http://schemas.android.com/tools"
         android:theme="@style/AppTheme">
         <activity android:name=".SplashActivity">
 
