1.feat（仿QQ交友卡片选择）自定义LayoutManager实现 2.feat（组件化）AutoService实现组件通信 3.feat（WebView）封装WebView、多进程通信、JS-Java通信、命令模式 4.feat（换肤）重写LayoutInflateFactory2并反射取代原来的factory实现

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     implementation project(path: ':flowlayout')
     implementation project(path: ':skin')
     implementation project(path: ':second-linked')
+    implementation project(path: ':webview')
+    implementation project(path: ':lib-login')
 
     implementation "androidx.multidex:multidex:$multidex"
 
@@ -95,6 +97,8 @@ dependencies {
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
 
     //implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    kapt rootProject.googleAutoServiceDependency
+    implementation rootProject.googleAutoServiceDependency
 
 
 }
