--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ buildscript {
     ext.smart_swipe_x ='1.0.0'
     ext.smart_refresh_layout ='1.1.0'
 
+    ext.googleAutoServiceDependency = 'com.google.auto.service:auto-service:1.0-rc7'
+
     repositories {
         google()
         jcenter()
@@ -54,6 +56,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/groups/public/'
+        }
         google()
         jcenter()
         maven {
@@ -68,5 +73,6 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 
 }
+
 
 
