--- a/extension-android/build.gradle
+++ b/extension-android/build.gradle
@@ -7,8 +7,8 @@ android {
     buildToolsVersion build_tools
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion min_sdk
+        targetSdkVersion target_sdk
         versionCode 1
         versionName "1.0"
 
